landing, spacing fix up

--- a/css/generic.css
+++ b/css/generic.css
@@ -61,7 +61,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: 4rem;
+    font-size: 4.5rem;
     font-family: 'edit-old-reg';
 }
 
